2008-11-13  Justin Garcia  <justin.garcia@apple.com>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=18620
        Long hang under TextIterator::advance() when loading http://www.lsvd.de/

        A huge section at the beginning of this document is invisible.  As we iterate through it,
        we create VisiblePositions unnecessarily.

        * editing/TextIterator.cpp:
        (WebCore::TextIterator::shouldRepresentNodeOffsetZero): Don't proceed to VisiblePosition
        creation if m_node is unrendered or invisible.  The answers wouldn't have much meaning
        and would be wasteful.  Also fixed some comments to reflect the fact that this function
        isn't specifically about emitting a newline.



Canonical link: https://commits.webkit.org/30590@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38376 268f45cc-cd09-0410-ab3c-d52691b4dbfc